# px4_autonomous

./: .gitignore  .gitmodules  README.md
planner/: CMakeLists.txt  package.xml
planner/src/: trajectory_publisher.cpp
px4_autonomous/: CMakeLists.txt  package.xml
px4_autonomous/config/: visualization.rviz
px4_autonomous/include/plugins/: gazebo_occupancy_grid_plugin.h
px4_autonomous/launch/: px4_autonomous_gazebo_launch.py  px4_autonomous_launch.py  px4_autonomous_sitl_classic_launch.py  px4_autonomous_sitl_launch.py
px4_autonomous/models/lidar_thi/: model.config  model.sdf
px4_autonomous/models/pillar/: model.config  model.sdf
px4_autonomous/models/typhoon_h480_thi/: model.config  typhoon_h480_thi.sdf  typhoon_h480_thi.sdf.jinja
px4_autonomous/models/wall1_thi/: model.config  model.sdf
px4_autonomous/models/wall2_thi/: model.config  model.sdf
px4_autonomous/models/wall3_thi/: model.config  model.sdf
px4_autonomous/plugins/: gazebo_occupancy_grid_plugin.cpp
px4_autonomous/src/: offboard.cpp  transformation.cpp  visualization.cpp
px4_autonomous/worlds/: custom.world  thi.world
px4_autonomous_interfaces/: CMakeLists.txt  package.xml
px4_autonomous_interfaces/action/: ExecutePath.action  ExecuteTrajectory.action  LearnTrajectory.action
px4_autonomous_interfaces/msg/: Trajectory.msg
rest_to_rest/: package.xml  setup.cfg  setup.py
rest_to_rest/models/: final_Q.npy
rest_to_rest/rest_to_rest/: qlearning.py  rest_to_rest_qlearning.py
rest_to_rest/rest_to_rest/models/: Q.npy  SARSA.npy
rl_planner/: package.xml  setup.cfg  setup.py
rl_planner/models/: final_Q.npy
rl_planner/rl_planner/: agent.py  environment.py  qlearning.py  rl_planner.py  util.py
